--- a/src/commands/load-and-push-image.yml
+++ b/src/commands/load-and-push-image.yml
@@ -7,13 +7,6 @@ description: >
   (https://circleci.com/docs/2.0/env-vars/#setting-an-environment-variable-in-a-project)
   or in Contexts (https://circleci.com/docs/2.0/contexts).
 parameters:
-  account-url:
-    default: AWS_ECR_ACCOUNT_URL
-    description: >
-      Env var storing Amazon ECR account URL that maps to an AWS account, e.g.
-      {awsAccountNum}.dkr.ecr.us-west-2.amazonaws.com defaults to
-      AWS_ECR_ACCOUNT_URL
-    type: env_var_name
   aws-access-key-id:
     default: AWS_ACCESS_KEY_ID
     description: >
@@ -26,6 +19,13 @@ parameters:
       AWS secret key for IAM role. Set this to the name of the environment
       variable you will set to hold this value, i.e. AWS_SECRET_ACCESS_KEY.
     type: env_var_name
+  registry-id:
+    type: env_var_name
+    default: AWS_ECR_REGISTRY_ID
+    description: >
+      The 12 digit AWS id associated with the ECR account.
+      This field is required
+
   checkout:
     default: true
     description: |
@@ -110,13 +110,13 @@ steps:
   - aws-ecr/ecr-login:
       profile-name: <<parameters.profile-name>>
       region: <<parameters.region>>
+      registry-id: <<parameters.registry-id>>
   - when:
       condition: <<parameters.create-repo>>
       steps:
         - aws-ecr/create-repo:
             profile-name: <<parameters.profile-name>>
             region: <<parameters.region>>
-            # do this to get around the trunomi/repo-name bug because nobody uses bloody quotes
             repo: <<parameters.repo>>
             repo-scan-on-push: <<parameters.repo-scan-on-push>>
   - when:
@@ -128,10 +128,11 @@ steps:
   - load-image:
       image-file: << parameters.image-file >>
   - tag-image-for-ecr:
-      account-url: <<parameters.account-url>>
+      registry-id: <<parameters.registry-id>>
       repo: <<parameters.repo>>
       tag: <<parameters.tag>>
   - aws-ecr/push-image:
-      account-url: <<parameters.account-url>>
+      registry-id: <<parameters.registry-id>>
+      region: <<parameters.region>>
       repo: <<parameters.repo>>
       tag: <<parameters.tag>>
