--- a/src/jobs/build-container.yml
+++ b/src/jobs/build-container.yml
@@ -6,20 +6,18 @@ description: >
   or in Contexts (https://circleci.com/docs/2.0/contexts).
 # executor: <<parameters.executor>>
 parameters:
-  account-url:
-    default: AWS_ECR_ACCOUNT_URL
-    description: >
-      Env var storing Amazon ECR account URL that maps to an AWS account, e.g.
-      {awsAccountNum}.dkr.ecr.us-west-2.amazonaws.com defaults to
-      AWS_ECR_ACCOUNT_URL
+  registry-id:
     type: env_var_name
+    default: AWS_ECR_REGISTRY_ID
+    description: >
+      The 12 digit AWS id associated with the ECR account.
+      This field is required
   attach-workspace:
     type: boolean
     default: false
     description: >
       Boolean for whether or not to attach to an existing workspace. Default
       is false.
-
   aws-access-key-id:
     default: AWS_ACCESS_KEY_ID
     description: >
@@ -100,11 +98,10 @@ parameters:
     description: AWS profile name to be configured.
     type: string
   region:
-    default: AWS_REGION
+    type: string
+    default: ${AWS_REGION}
     description: >
-      Name of env var storing your AWS region information, defaults to
-      AWS_REGION
-    type: env_var_name
+      AWS region of ECR repository. Defaults to environment variable ${AWS_REGION}
   repo:
     description: Name of an Amazon ECR repository
     type: string
