--- a/src/jobs/load-and-push-container-to-aws.yml
+++ b/src/jobs/load-and-push-container-to-aws.yml
@@ -1,18 +1,22 @@
 description: Loads an image from file and then pushes to AWS
 parameters:
-  account-url:
-    default: AWS_ECR_ACCOUNT_URL
-    description: >
-      Env var storing Amazon ECR account URL that maps to an AWS account, e.g.
-      {awsAccountNum}.dkr.ecr.us-west-2.amazonaws.com defaults to
-      AWS_ECR_ACCOUNT_URL
-    type: env_var_name
   attach-workspace:
     type: boolean
     default: false
     description: >
       Boolean for whether or not to attach to an existing workspace. Default
       is false.
+  registry-id:
+    type: env_var_name
+    default: AWS_ECR_REGISTRY_ID
+    description: >
+      The 12 digit AWS id associated with the ECR account.
+      This field is required
+  region:
+    type: string
+    default: ${AWS_REGION}
+    description: >
+      AWS region of ECR repository. Defaults to environment variable ${AWS_REGION}
   aws-access-key-id:
     default: AWS_ACCESS_KEY_ID
     description: >
@@ -25,6 +29,10 @@ parameters:
       AWS secret key for IAM role. Set this to the name of the environment
       variable you will set to hold this value, i.e. AWS_SECRET_ACCESS_KEY.
     type: env_var_name
+  profile-name:
+    default: default
+    description: AWS profile name to be configured.
+    type: string
   checkout:
     default: false
     description: |
@@ -71,16 +79,6 @@ parameters:
       Path to your image.tar file.
       Defaults to '/tmp/workspace/image.tar'.
     type: string
-  profile-name:
-    default: default
-    description: AWS profile name to be configured.
-    type: string
-  region:
-    default: AWS_REGION
-    description: >
-      Name of env var storing your AWS region information, defaults to
-      AWS_REGION
-    type: env_var_name
   remote-docker-layer-caching:
     default: false
     description: >
@@ -143,7 +141,7 @@ steps:
   #           version: <<parameters.remote-docker-version>>
 
   - load-and-push-image:
-      account-url: <<parameters.account-url>>
+      registry-id: <<parameters.registry-id>>
       aws-access-key-id: <<parameters.aws-access-key-id>>
       aws-secret-access-key: <<parameters.aws-secret-access-key>>
       checkout: <<parameters.checkout>>
