Add/Remove Debug or minor tweak

--- a/src/commands/build-image-with-local-tags.yml
+++ b/src/commands/build-image-with-local-tags.yml
@@ -67,6 +67,7 @@ steps:
             region: <<parameters.region>>
             registry-id: <<parameters.registry-id>>
   - run:
+      name: Build Image with Local Tags
       environment:
         ORB_ENV_REGISTRY_ID: <<parameters.registry-id>>
         ORB_EVAL_REGION: <<parameters.region>>
