--- a/src/commands/tag-image-for-ecr.yml
+++ b/src/commands/tag-image-for-ecr.yml
@@ -24,6 +24,6 @@ steps:
       environment:
         ORB_ENV_REGISTRY_ID: <<parameters.registry-id>>
         ORB_EVAL_REGION: <<parameters.region>>
-        ORB_ENV_TAGS: <<parameters.tag>>
+        ORB_EVAL_TAGS: <<parameters.tag>>
         ORB_ENV_REPO: <<parameters.repo>>
       command: <<include(scripts/tag-image-for-ecr.sh)>>
