Hmmm some aligning with aws-ecr

--- a/src/commands/build-and-push-image.yml
+++ b/src/commands/build-and-push-image.yml
@@ -164,4 +164,5 @@ steps:
   - aws-ecr/push-image:
       repo: <<parameters.repo>>
       registry-id: <<parameters.registry-id>>
+      region: <<parameters.region>>
       tag: <<parameters.tag>>
