--- a/src/commands/tag-image-for-ecr.yml
+++ b/src/commands/tag-image-for-ecr.yml
@@ -25,5 +25,5 @@ steps:
         ORB_ENV_REGISTRY_ID: <<parameters.registry-id>>
         ORB_EVAL_REGION: <<parameters.region>>
         ORB_EVAL_TAGS: <<parameters.tag>>
-        ORB_ENV_REPO: <<parameters.repo>>
+        ORB_EVAL_REPO: <<parameters.repo>>
       command: <<include(scripts/tag-image-for-ecr.sh)>>
