--- a/src/commands/build-image-with-local-tags.yml
+++ b/src/commands/build-image-with-local-tags.yml
@@ -72,7 +72,7 @@ steps:
         ORB_ENV_REGISTRY_ID: <<parameters.registry-id>>
         ORB_EVAL_REGION: <<parameters.region>>
         ORB_EVAL_TAGS: <<parameters.tag>>
-        ORB_ENV_REPO: <<parameters.repo>>
+        ORB_EVAL_REPO: <<parameters.repo>>
         ORB_ENV_PROFILE: <<parameters.profile-name>>
         ORB_ENV_SKIP_TAG_EXISTS: <<parameters.skip-when-tags-exist>>
         ORB_ENV_EXTRA_BUILD_ARGS: <<parameters.extra-build-args>>
