--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -8,7 +8,7 @@ parameters:
     default: ubuntu-2204:2023.02.1
   use-docker-layer-caching:
     type: boolean
-    default: true
+    default: false
   resource-class:
     type: string
     default: medium
