Add sourceing of custom BASH_ENV back due to this bug https://github.com/circleci/circleci-docs/issues/1650

--- a/src/commands/restore-custom-env-var.yml
+++ b/src/commands/restore-custom-env-var.yml
@@ -19,6 +19,7 @@ steps:
               if [ -e "<<parameters.env-var-file>>" ]; then
                 echo "Restoring custom vars"
                 cat <<parameters.env-var-file>> >> $BASH_ENV
+                source $BASH_ENV
                 cat <<parameters.env-var-file>>
               else
                 echo "no custom env-var-file found. skipping"
